added some new changes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://chosen:chosen2730@cluster0.dkck5l1.mongodb.net/LMS
+JWT_SECRET=72c22d6e-8716-4c9c-a0c5-45cbe3ff08df
