--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "build": "tsc --build",
+    "build": "npx tsc --build",
     "start": "node ./dist/src/app.js",
     "dev": "nodemon src/app.ts"
   },
